<resources>
    <string name="app_name">Blitz</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="reset_confirmation_title">Reset the clock</string>
    <string name="reset_confirmation_message">Do you really want to reset the clock?</string>
    <string name="game_settings_category_title">Game</string>
    <string name="game_type_pref_title">Game type</string>
    <string name="about">About</string>
    <string name="app_settings_category_title">General</string>
    <string name="sound_pref_title">Play sounds</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="time_unit_pref_title">Time unit</string>
    <string name="game_duration_pref_title">Player time</string>
    <string name="delay_pref_title">Delay (seconds)</string>
    <string name="increment_pref_title">Increment by (seconds)</string>
    <string name="game_type_standard">Standard</string>
    <string name="game_type_simple_delay">Simple delay / US delay</string>
    <string name="game_type_bronstein" translatable="false">Bronstein delay</string>
    <string name="game_type_fisher" translatable="false">Fischer / Increment / Bonus</string>
    <string name="duration_input_hint">Time for each player</string>
    <string name="feedback">Feedback</string>
    <string name="developer_email" translatable="false">borwoj+blitz@gmail.com</string>
</resources>
